# permanager

./: .gitignore  Cargo.toml  README.md  config.yml  file.md  index.ts  main.rs  notes.md  script.py  spec.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI_SPEC.md  USER_STORIES.md
docs/commands/: config.md  list.md
docs/draft/: CLI_SPEC_OVERVIEW.md
src/: config.rs  list.rs  main.rs  outdated.rs
src/api/: handler.rs
tests/: README.md
tests/git-tracking/: README.md  helpers.sh  run-all.sh  test-01-line-movement.sh  test-02-content-change.sh  test-03-git-log-l.sh  test-04-duplicate-content.sh  test-05-check-original-range.sh  test-06-track-line-numbers.sh  test-07-diff-line-mapping.sh
tests/permanager-e2e/: helpers.sh  run-all.sh  test-01-basic-list.sh  test-02-multiple-files.sh  test-03-gitignore.sh  test-04-subdirectory.sh  test-05-file-types.sh
tests/permanager-e2e/config/: test-01-set.sh  test-02-set-multiple.sh  test-03-unset.sh  test-04-list.sh
tests/permanager-e2e/list/: test-01-basic-list.sh  test-02-multiple-files.sh  test-03-gitignore.sh  test-04-subdirectory.sh  test-05-file-types.sh  test-06-outdated.sh
