[package]
name = "permanager"
version = "0.1.0"
edition = "2021"
description = "Scan and list GitHub permanent links (blob/<sha40>) in your source code"
license = "MIT"
repository = "https://github.com/Abebe123000/docref"

[dev-dependencies]
indoc = "2"
tempfile = "3"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
